--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,9 @@
 .heroContainer {
   position: relative;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   width: 100%;
   height: 710px;
   background:  linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8)), url('../../public/monolith_bg.png');
@@ -16,6 +17,7 @@
   color: white;
 }
 .styledHeading {
+  font-size: 18px;
   color: #dc3545;
   text-transform: capitalize;
 }
@@ -24,12 +26,17 @@
   font-weight: 400;
   line-height: 1.2;
 }
+.text {
+  font-size: 18px;
+  line-height: 1.5;
+}
 .buttonContainer {
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 2rem;
+  padding: 0;
+  margin: 2.5rem 0;
 }
 .filledCta {
   display: block;
@@ -37,14 +44,14 @@
   color: white;
   border: none;
   outline: none;
-  padding: 1.2rem 1rem;
+  padding: 16px 40px;
   width: 100%;
-  max-width: 240px;
-  border-radius: 34px;
+  max-width: 260px;
+  border-radius: 30px;
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 1.5;
-  transition: all .35s ease;
+  transition: all .45s ease;
 }
 .filledCta:hover {
   opacity: .8;
@@ -56,16 +63,66 @@
   color: white;
   border: 1px solid #cc4d59;
   outline: none;
-  padding: 1.2rem 1rem;
+  padding: 16px 40px;
   width: 100%;
-  max-width: 240px;
-  border-radius: 34px;
+  max-width: 260px;
+  border-radius: 30px;
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 1.5;
-  transition: all .35s ease;
+  transition: all .45s ease;
 }
 .outlinedCta:hover {
   background: #cc4d59;
   cursor: pointer;
+}
+.sliderContainer {
+  width: 100%;
+  max-width: 1370px;
+  margin-top: 2rem;
+}
+.logoContainer {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  width: 100px;
+  height: 88px;
+  padding: 1rem;
+  transition: all .45 ease;
+}
+.logoContainer:hover {
+  opacity: .7;
+  cursor: pointer;
+}
+.logoContainer img {
+  height: auto;
+}
+
+@media(max-width: 1010px) {
+  .heroContainer {
+    height: auto;
+    padding: 1.5rem;
+  }
+}
+@media(max-width: 732px) {
+  .mainHeading {
+    font-size: 3rem;
+  }
+  .text {
+    font-size: 1rem;
+  }
+}
+@media(max-width: 655px) {
+  .buttonContainer {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .filledCta {
+    margin-bottom: 1.2rem;
+  }
+}
+@media(max-width: 491px) {
+ .logoContainer {
+  padding: 0;
+ }
 }
